--- a/.github/workflows/hello-actions.yml
+++ b/.github/workflows/hello-actions.yml
@@ -31,6 +31,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY || ${GITHUB_REPOSITORY#*/} }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo ecr repo name is $ECR_REPOSITORY
