--- a/.github/workflows/hello-actions.yml
+++ b/.github/workflows/hello-actions.yml
@@ -30,8 +30,17 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: fetch ecr repo from secrets
+        if: secrets.ECR_REPOSITORY
         env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY || ${GITHUB_REPOSITORY#*/} }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        run: |
+          echo ecr repo name is $ECR_REPOSITORY
+
+      # Runs a set of commands using the runners shell
+      - name: fetch ecr repo from envvar
+        if: !secrets.ECR_REPOSITORY
+        env:
+          ECR_REPOSITORY: ${GITHUB_REPOSITORY#*/}
         run: |
           echo ecr repo name is $ECR_REPOSITORY
