--- a/.github/workflows/hello-actions.yml
+++ b/.github/workflows/hello-actions.yml
@@ -35,17 +35,13 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: fetch ecr repo from secrets
         if: env.ECR_REPOSITORY_EXISTS == 'true'
-        env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         run: |
-          echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> $GITHUB_ENV
+          echo "ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}" >> $GITHUB_ENV
 
       - name: fetch ecr repo from repo name
         if: env.ECR_REPOSITORY_EXISTS == 'false'
-        env:
-          ECR_REPOSITORY: ${GITHUB_REPOSITORY#*/}
         run: |
-          echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> $GITHUB_ENV
+          echo "ECR_REPOSITORY=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
 
       - name: is env var available in next step ?
         run: |
