--- a/.github/workflows/hello-actions.yml
+++ b/.github/workflows/hello-actions.yml
@@ -35,14 +35,11 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: fetch ecr repo from secrets
         if: env.ECR_REPOSITORY_EXISTS == 'true'
-        run: |
-          echo "ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}" >> $GITHUB_ENV
+        run: echo "ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}" >> $GITHUB_ENV
 
       - name: fetch ecr repo from repo name
         if: env.ECR_REPOSITORY_EXISTS == 'false'
-        run: |
-          echo "ECR_REPOSITORY=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
+        run: echo "ECR_REPOSITORY=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
 
       - name: is env var available in next step ?
-        run: |
-          echo "final ecr repo name is ${{ env.ECR_REPOSITORY }}"
+        run: echo "final ecr repo name is ${{ ECR_REPOSITORY }}"
