--- a/.github/workflows/check-secrets.yml
+++ b/.github/workflows/check-secrets.yml
@@ -42,4 +42,4 @@ jobs:
         run: echo "ECR_REPOSITORY=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
 
       - name: is env var available in next step ?
-        run: echo "final ecr repo name is ${{ ECR_REPOSITORY }}"
+        run: echo "final ecr repo name is ${{ env.ECR_REPOSITORY }}"
