on-conditions.yml: test a normal push wont trigger CI

--- a/.github/workflows/on-conditions.yml
+++ b/.github/workflows/on-conditions.yml
@@ -2,10 +2,10 @@ name: On Conditons
 on:
   workflow_dispatch:
   push:
-    branches:
-      - main
-      - alpha
-      - dev
+    # branches:
+      # - main
+      # - alpha
+      # - dev
     tags:
       - k8s-prod-*
       - k8s-alpha-*
